[gd_scene load_steps=10 format=3 uid="uid://brw1qj2i2c2d6"]

[ext_resource type="Script" uid="uid://dxcjb5ivrjr4f" path="res://plant.gd" id="1_k54vv"]
[ext_resource type="Texture2D" uid="uid://bfqu0xkxqjg5a" path="res://assets/adult_stem.png" id="2_5o73s"]
[ext_resource type="Texture2D" uid="uid://c16qkf4j8cepy" path="res://assets/dirt_tile.png" id="2_uc8tw"]
[ext_resource type="Texture2D" uid="uid://dar6wmaktjwq4" path="res://assets/baby_stem.png" id="3_uc8tw"]
[ext_resource type="Texture2D" uid="uid://c56eg8em8spub" path="res://assets/center_flower.png" id="4_t2kmy"]
[ext_resource type="Texture2D" uid="uid://d0ads5xbuf6e7" path="res://assets/right_flower.png" id="5_o882y"]
[ext_resource type="Texture2D" uid="uid://bs681dvw48l74" path="res://assets/left_flower.png" id="6_668is"]

[sub_resource type="Curve2D" id="Curve2D_5o73s"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, -10, 0, 0, 0, 0, 10, -3, 0, 0, 0, 0, 10, 7, 0, 0, 0, 0, 0, 11, 0, 0, 0, 0, -14, 5, 0, 0, 0, 0, -13, -6, 0, 0, 0, 0, -1, -10)
}
point_count = 8

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k54vv"]
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
spread = 180.0
initial_velocity_max = 40.23
gravity = Vector3(0, 0, 0)
damping_min = 33.908
damping_max = 33.908
color = Color(1, 1, 0.835294, 1)

[node name="Plant" type="Node2D"]
texture_filter = 1
script = ExtResource("1_k54vv")
genes = Vector3(-0.5, 1, -1)

[node name="HighlightTimer" type="Timer" parent="."]
autostart = true

[node name="Node2D" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="Node2D"]
curve = SubResource("Curve2D_5o73s")

[node name="HighlightPath" type="PathFollow2D" parent="Node2D/Path2D"]
unique_name_in_owner = true
rotation = -1.67046

[node name="HighlightCursor" type="GPUParticles2D" parent="Node2D/Path2D/HighlightPath"]
unique_name_in_owner = true
position = Vector2(8.95533, 0.895534)
rotation = 1.67046
emitting = false
amount = 160
lifetime = 0.91
randomness = 0.71
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_k54vv")

[node name="CursorTimer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, -9)

[node name="CollisionPolygon2d" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-0.5, 9.5)
polygon = PackedVector2Array(-2.5, -22.5, -27.5, -10.5, -27.5, 9.5, -0.5, 23.5, 24.5, 12.5, 25.5, -11.5)

[node name="DirtTile" type="Sprite2D" parent="Area2D"]
visible = false
position = Vector2(0, 6)
texture = ExtResource("2_uc8tw")

[node name="BabyStem" type="Sprite2D" parent="."]
position = Vector2(-3, -3)
texture = ExtResource("3_uc8tw")

[node name="AdultParts" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="AdultStem" type="Sprite2D" parent="AdultParts"]
position = Vector2(-3, 5)
texture = ExtResource("2_5o73s")

[node name="LeftFlower" type="Sprite2D" parent="AdultParts"]
position = Vector2(-3, 9)
texture = ExtResource("6_668is")

[node name="CenterFlower" type="Sprite2D" parent="AdultParts"]
position = Vector2(-1, 1)
texture = ExtResource("4_t2kmy")

[node name="RightFlower" type="Sprite2D" parent="AdultParts"]
position = Vector2(-1, 8)
texture = ExtResource("5_o882y")

[node name="TooltipLayer" type="CanvasLayer" parent="."]
layer = 3
visible = false

[node name="Tooltip" type="ColorRect" parent="TooltipLayer"]
offset_left = 16.0
offset_top = -35.0
offset_right = 270.0
offset_bottom = 55.0
size_flags_horizontal = 3
mouse_filter = 2
color = Color(0.266575, 0.266575, 0.266575, 1)

[node name="CenterContainer" type="CenterContainer" parent="TooltipLayer/Tooltip"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="TooltipLayer/Tooltip/CenterContainer"]
layout_mode = 2

[node name="PrimaryBox" type="VBoxContainer" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/PrimaryBox"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/PrimaryBox/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Fire"

[node name="FireProgress" type="ProgressBar" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/PrimaryBox/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 50.0
rounded = true
fill_mode = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/PrimaryBox"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/PrimaryBox/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Nature"

[node name="NatureProgress" type="ProgressBar" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/PrimaryBox/HBoxContainer2"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
rounded = true
fill_mode = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/PrimaryBox"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/PrimaryBox/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
text = "Water"

[node name="WaterProgress" type="ProgressBar" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/PrimaryBox/HBoxContainer3"]
unique_name_in_owner = true
modulate = Color(0, 0, 1, 1)
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
rounded = true
fill_mode = 1

[node name="SecondaryBox" type="VBoxContainer" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/SecondaryBox"]
layout_mode = 2

[node name="IceProgress" type="ProgressBar" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/SecondaryBox/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0, 0.780392, 0.745098, 1)
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
rounded = true

[node name="Label" type="Label" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/SecondaryBox/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.564706, 0.564706, 1)
text = "Ice"

[node name="HBoxContainer2" type="HBoxContainer" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/SecondaryBox"]
layout_mode = 2

[node name="MagicProgress" type="ProgressBar" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/SecondaryBox/HBoxContainer2"]
unique_name_in_owner = true
modulate = Color(0.686275, 0, 0.678431, 1)
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
rounded = true

[node name="Label" type="Label" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/SecondaryBox/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.564706, 0, 0.564706, 1)
text = "Magic"

[node name="HBoxContainer3" type="HBoxContainer" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/SecondaryBox"]
layout_mode = 2

[node name="EarthProgress" type="ProgressBar" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/SecondaryBox/HBoxContainer3"]
unique_name_in_owner = true
modulate = Color(0.752941, 0.729412, 0, 1)
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
rounded = true

[node name="Label" type="Label" parent="TooltipLayer/Tooltip/CenterContainer/HBoxContainer/SecondaryBox/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.564706, 0.564706, 0, 1)
text = "Earth"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
